Fixing whitespace issues.

--- a/css/style.css
+++ b/css/style.css
@@ -990,7 +990,7 @@ hr.location_index{
 	border-radius: 4px;
 	box-shadow: 1px 1px 2px #e3e3e3;
 	background: #fff;
-	min-height: 485px;
+	min-height: 365px;
 }
 
 .exhibit-guides{
@@ -1085,7 +1085,7 @@ hr.location_index{
   width: 100%;
   background-color: #2a2a2a;
   margin-bottom: 10px;
-  height: 485px;
+  height: 370px;
 }
 
 .oembed  .oembed-title{
